--- a/servicios.html
+++ b/servicios.html
@@ -293,8 +293,9 @@
             </p>
             <div class="footer-social">
               <a
-                href="https://www.instagram.com/menteencalma.pe/"
+                href="https://instagram.com/menteencalma.pe"
                 target="_blank"
+                class="social-icon"
                 aria-label="Instagram"
               >
                 <i class="fab fa-instagram"></i>
@@ -329,7 +330,7 @@
           <div class="footer-section">
             <h3>Horarios de atención</h3>
             <p>Lunes a Viernes: 11:00 am - 8:00 pm</p>
-            <p>Sábados: 11:00 am - 2:00 pm</p>
+            <p>Sábados: 9:00 am - 2:00 pm</p>
           </div>
         </div>
         <div class="footer-bottom">
