--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- TÍTULO SEO -->
-    <title>Mente en Calma - Blog de Psicología | Bienestar Emocional</title>
+    <title>Mente en Calma - Blog de Psicología</title>
 
     <!-- META DESCRIPTION -->
     <meta
@@ -94,8 +94,30 @@
             </a>
           </div>
           <ul class="nav-links">
-            <li><a href="index.html">QUIENES SOMOS</a></li>
-            <li><a href="servicios.html">SERVICIOS</a></li>
+            <li><a href="index.html">INICIO</a></li>
+            <li><a href="equipo-clinico.html">EQUIPO CLÍNICO</a></li>
+            <li class="dropdown">
+              <a class="dropdown-trigger"
+                >SERVICIOS <i class="fas fa-chevron-down"></i
+              ></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="servicios/terapia-psicologica.html"
+                    >TERAPIA PSICOLÓGICA</a
+                  >
+                </li>
+                <li>
+                  <a href="servicios/talleres-grupales.html"
+                    >TALLERES GRUPALES</a
+                  >
+                </li>
+                <li>
+                  <a href="servicios/asesoria-clinica.html"
+                    >ASESORÍA CLÍNICA A PSICÓLOGOS</a
+                  >
+                </li>
+              </ul>
+            </li>
             <li><a href="metodologia.html">METODOLOGÍA</a></li>
             <li><a href="blog.html" class="active">BLOG</a></li>
           </ul>
@@ -166,14 +188,20 @@
       <div class="container">
         <div class="categorias-botones">
           <a href="blog/ansiedad.html" class="categoria-btn">Ansiedad</a>
-          <a href="blog/autoestima.html" class="categoria-btn">Autoexigencia y autoestima</a>
-          <a href="blog/limites.html" class="categoria-btn">Límites y relaciones</a>
-          <a href="blog/terapia-online.html" class="categoria-btn">Terapia basada en evidencia</a>
+          <a href="blog/autoestima.html" class="categoria-btn"
+            >Autoexigencia y autoestima</a
+          >
+          <a href="blog/limites.html" class="categoria-btn"
+            >Límites y relaciones</a
+          >
+          <a href="blog/terapia-online.html" class="categoria-btn"
+            >Terapia basada en evidencia</a
+          >
         </div>
       </div>
     </section>
 
-   <!-- Footer -->
+    <!-- Footer -->
     <footer class="footer">
       <div class="container">
         <div class="footer-content">
