--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- TÍTULO SEO -->
-    <title>Mente en Calma - Quiénes Somos | Psicólogas en Lima</title>
+    <title>Mente en Calma - Inicio</title>
 
     <!-- META DESCRIPTION -->
     <meta
@@ -94,16 +94,37 @@
         <div class="nav-container">
           <div class="logo">
             <a href="index.html" aria-label="Mente en Calma - Inicio">
-              <img
-                src="img/logo.png"
+              <img                
                 alt="Mente en Calma - Centro Psicológico en Lima"
                 class="logo-image"
               />
             </a>
           </div>
           <ul class="nav-links">
-            <li><a href="index.html" class="active">QUIENES SOMOS</a></li>
-            <li><a href="servicios.html">SERVICIOS</a></li>
+            <li><a href="index.html" class="active">INICIO</a></li>
+            <li><a href="equipo-clinico.html">EQUIPO CLÍNICO</a></li>
+            <li class="dropdown">
+              <a class="dropdown-trigger"
+                >SERVICIOS <i class="fas fa-chevron-down"></i
+              ></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="servicios/terapia-psicologica.html"
+                    >TERAPIA PSICOLÓGICA</a
+                  >
+                </li>
+                <li>
+                  <a href="servicios/talleres-grupales.html"
+                    >TALLERES GRUPALES</a
+                  >
+                </li>
+                <li>
+                  <a href="servicios/asesoria-clinica.html"
+                    >ASESORÍA CLÍNICA A PSICÓLOGOS</a
+                  >
+                </li>
+              </ul>
+            </li>
             <li><a href="metodologia.html">METODOLOGÍA</a></li>
             <li><a href="blog.html">BLOG</a></li>
           </ul>
@@ -150,48 +171,121 @@
       <div class="hero-content">
         <h1 class="hero-title">Terapia Psicológica</h1>
         <p class="hero-subtitle">
-          Un espacio profesional para entender lo que te está pasando y empezar
-          a trabajar en ti desde cualquier parte del mundo.
+          Te ayudamos a gestionar tu ansiedad, aprender a regular lo que
+          sientes, poner límites, fortalecer tu autoestima y dejar de vivir en
+          alerta constante.
         </p>
         <a href="https://wa.me/51991688424" target="_blank" class="cta-button"
-          >Reserva tu cita</a
+          >Agenda tu primera sesión</a
         >
       </div>
     </header>
 
+    <!-- Sección de Áreas de Trabajo -->
+    <section class="areas-trabajo">
+      <div class="areas-container">
+        <!-- Lado izquierdo - Título grande -->
+        <div class="areas-left">
+          <h2 class="areas-title">
+            Nuestras áreas de trabajo<br />con adolescentes y adultos
+          </h2>
+        </div>
+
+        <!-- Lado derecho - Desplegables -->
+        <div class="areas-right">
+          <!-- Desplegable 1 - Ansiedad -->
+          <div class="accordion-item">
+            <button class="accordion-header" id="accordion-btn-1">
+              <span>Ansiedad y crisis de ansiedad</span>
+              <i class="fas fa-chevron-down"></i>
+            </button>
+            <div class="accordion-content" id="accordion-content-1">
+              <p>
+                Intervención clínica en ansiedad persistente, hipervigilancia y
+                crisis agudas.
+              </p>
+            </div>
+          </div>
+
+          <!-- Desplegable 2 - Regulación emocional -->
+          <div class="accordion-item">
+            <button class="accordion-header" id="accordion-btn-2">
+              <span>Regulación emocional</span>
+              <i class="fas fa-chevron-down"></i>
+            </button>
+            <div class="accordion-content" id="accordion-content-2">
+              <p>
+                Abordaje de dificultades para identificar y modular respuestas
+                emocionales intensas.
+              </p>
+            </div>
+          </div>
+
+          <!-- Desplegable 3 - Puesta de límites -->
+          <div class="accordion-item">
+            <button class="accordion-header" id="accordion-btn-3">
+              <span>Puesta de límites</span>
+              <i class="fas fa-chevron-down"></i>
+            </button>
+            <div class="accordion-content" id="accordion-content-3">
+              <p>
+                Fortalecimiento de habilidades asertivas y reducción de patrones
+                de sobreadaptación.
+              </p>
+            </div>
+          </div>
+
+          <!-- Desplegable 4 - Autoestima -->
+          <div class="accordion-item">
+            <button class="accordion-header" id="accordion-btn-4">
+              <span>Autoestima</span>
+              <i class="fas fa-chevron-down"></i>
+            </button>
+            <div class="accordion-content" id="accordion-content-4">
+              <p>
+                Trabajo clínico sobre autocrítica, perfeccionismo y
+                sobreesfuerzo crónico.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Sección Valores -->
     <section class="valores-section">
       <div class="container">
-        <h2 class="section-title">Valores de Mente en Calma</h2>
+        <h2 class="section-title">Principios que sostienen cada proceso</h2>
         <div class="valores-grid">
           <div class="valor-card">
             <div class="valor-icono">
               <i class="fas fa-scale-balanced"></i>
             </div>
-            <h3 class="valor-titulo">Ética profesional</h3>
+            <h3 class="valor-titulo">Ética clínica</h3>
             <p class="valor-descripcion">
-              Nos guiamos por principios éticos, confidencialidad y un
-              compromiso responsable con cada proceso terapéutico.
+              Cada proceso se maneja bajo principios éticos claros,
+              confidencialidad estricta y responsabilidad profesional en cada
+              etapa.
             </p>
           </div>
           <div class="valor-card">
             <div class="valor-icono">
               <i class="fas fa-brain"></i>
             </div>
-            <h3 class="valor-titulo">Criterio clínico</h3>
+            <h3 class="valor-titulo">Marco estructurado</h3>
             <p class="valor-descripcion">
-              Evitamos intervenciones simplistas o estandarizadas, sosteniendo
-              el trabajo terapéutico en formación sólida y evidencia científica.
+              Cada intervención responde a un marco clínico definido, con
+              estándares establecidos y supervisión interna.
             </p>
           </div>
           <div class="valor-card">
             <div class="valor-icono">
               <i class="fas fa-book-open"></i>
             </div>
-            <h3 class="valor-titulo">Formación continua</h3>
+            <h3 class="valor-titulo">Formación especializada</h3>
             <p class="valor-descripcion">
-              La actualización permanente forma parte de nuestro compromiso
-              profesional para ofrecer intervenciones responsables.
+              El equipo mantiene formación continua en ansiedad, regulación
+              emocional y terapias basadas en evidencia.
             </p>
           </div>
           <div class="valor-card">
@@ -202,119 +296,6 @@
             <p class="valor-descripcion">
               Construimos el vínculo terapéutico desde la escucha, el cuidado y
               el respeto por la historia de cada persona.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Sección Sobre mí -->
-    <section class="about-section" id="sobre-mi">
-      <div class="container">
-        <div class="about-content">
-          <div class="about-image">
-            <img
-              src="img/soy.jpeg"
-              alt="Magaly Zevallos - Psicóloga especialista en Terapia Cognitivo Conductual en Lima"
-            />
-          </div>
-          <div class="about-text">
-            <div class="about-header">
-              <h2 class="about-name">Hola, soy Magaly Zevallos</h2>
-              <p class="about-subtitle">
-                Psicóloga clínica y fundadora de Mente en Calma
-              </p>
-            </div>
-
-            <p>
-              Licenciada en Psicología por la Universidad de San Martín de
-              Porres.
-            </p>
-
-            <p>
-              Cuento con un posgrado en Psicología Clínica por la Universidad
-              Complutense de Madrid y soy egresada de la maestría en Psicología
-              Clínica y Neuropsicología por la Universidad Peruana Cayetano
-              Heredia.
-            </p>
-
-            <p>
-              Mi enfoque principal es la terapia cognitivo conductual (TCC).
-              Actualmente amplío mi formación en terapias contextuales,
-              específicamente en la terapia de aceptación y compromiso (ACT). De
-              manera paralela estoy cursando un diplomado en Trastornos de
-              Ansiedad en la Fundación Foro de Buenos Aires.
-            </p>
-
-            <p>
-              Trabajo en el área clínica con jóvenes y adultos, enfocándome
-              principalmente en el abordaje de la ansiedad, desde un trabajo
-              terapéutico estructurado y basado en evidencia.
-            </p>
-
-            <p>
-              Mi interés está puesto en ayudar a las personas a construir una
-              vida con mayor sentido.
-            </p>
-
-            <a
-              href="https://wa.me/51991688424"
-              target="_blank"
-              class="reserve-button"
-              >Reservar cita</a
-            >
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Sección Equipo -->
-    <section class="equipo-section">
-      <div class="container">
-        <h2 class="section-title">Psicólogas de Mente en Calma</h2>
-        <div class="equipo-grid">
-          <!-- Psicóloga 1: Magaly Zevallos -->
-          <div class="equipo-card">
-            <div class="equipo-foto">
-              <img
-                src="img/magalyZevallos.jpg"
-                alt="Magaly Zevallos - Psicóloga especialista en TCC y ansiedad"
-              />
-            </div>
-            <h3 class="equipo-nombre">Magaly Zevallos</h3>
-            <p class="equipo-descripcion">
-              Psicóloga y psicoterapeuta de jóvenes y adultos.<br />Enfoque
-              cognitivo conductual (TCC)
-            </p>
-          </div>
-
-          <!-- Psicóloga 2: Kassandra Carrera -->
-          <div class="equipo-card">
-            <div class="equipo-foto">
-              <img
-                src="img/kassandraCarrera.jpg"
-                alt="Kassandra Carrera - Psicóloga especialista en TREC y adolescentes"
-              />
-            </div>
-            <h3 class="equipo-nombre">Kassandra Carrera</h3>
-            <p class="equipo-descripcion">
-              Psicóloga y psicoterapeuta de adolescentes y adultos jóvenes.<br />Enfoque
-              racional emotivo conductual (TREC)
-            </p>
-          </div>
-
-          <!-- Psicóloga 3 -->
-          <div class="equipo-card">
-            <div class="equipo-foto">
-              <img
-                src="img/psicologa.jpg"
-                alt="Psicóloga especialista en terapia de pareja en Lima"
-              />
-            </div>
-            <h3 class="equipo-nombre">Psicóloga</h3>
-            <p class="equipo-descripcion">
-              Psicóloga y psicoterapeuta de parejas.<br />Enfoque cognitivo
-              conductual
             </p>
           </div>
         </div>
@@ -508,7 +489,7 @@
     <!-- Sección Videos -->
     <section class="videos-section">
       <div class="container">
-        <h2 class="section-title">Conoce más sobre nuestro trabajo</h2>
+        <h2 class="section-title">Cómo abordamos cada caso</h2>
         <div class="videos-grid">
           <div class="video-card">
             <div class="video-container">
