--- a/metodologia.html
+++ b/metodologia.html
@@ -99,8 +99,30 @@
             </a>
           </div>
           <ul class="nav-links">
-            <li><a href="index.html">QUIENES SOMOS</a></li>
-            <li><a href="servicios.html">SERVICIOS</a></li>
+            <li><a href="index.html">INICIO</a></li>
+            <li><a href="equipo-clinico.html">EQUIPO CLÍNICO</a></li>
+            <li class="dropdown">
+              <a class="dropdown-trigger"
+                >SERVICIOS <i class="fas fa-chevron-down"></i
+              ></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="servicios/terapia-psicologica.html"
+                    >TERAPIA PSICOLÓGICA</a
+                  >
+                </li>
+                <li>
+                  <a href="servicios/talleres-grupales.html"
+                    >TALLERES GRUPALES</a
+                  >
+                </li>
+                <li>
+                  <a href="servicios/asesoria-clinica.html"
+                    >ASESORÍA CLÍNICA A PSICÓLOGOS</a
+                  >
+                </li>
+              </ul>
+            </li>
             <li><a href="metodologia.html" class="active">METODOLOGÍA</a></li>
             <li><a href="blog.html">BLOG</a></li>
           </ul>
@@ -147,10 +169,11 @@
       <div class="hero-content">
         <h1 class="hero-title">Nuestra Metodología Terapéutica</h1>
         <p class="hero-subtitle">
-          Enfoque basado en evidencia científica y calidez humana
+          Intervenciones estructuradas basadas en evidencia científica y
+          formulación clínica individualizada.
         </p>
         <a href="https://wa.me/51991688424" target="_blank" class="cta-button"
-          >Reserva tu cita</a
+          >Agenda tu primera sesión</a
         >
       </div>
     </header>
