--- a/equipo-clinico.html
+++ b/equipo-clinico.html
@@ -248,8 +248,8 @@
       <div class="container">
         <h2 class="section-title">Psicólogas de Mente en Calma</h2>
         <div class="equipo-grid">
-          <!-- Psicóloga 1: Magaly Zevallos -->
-          <div class="equipo-card">
+          <!-- Psicóloga 1: Magaly Zevallos - Color #f1ebe1 -->
+          <div class="equipo-card color-equipo-1">
             <div class="equipo-foto">
               <img
                 src="img/magalyZevallos.jpg"
@@ -264,8 +264,8 @@
             </p>
           </div>
 
-          <!-- Psicóloga 2: Kassandra Carrera -->
-          <div class="equipo-card">
+          <!-- Psicóloga 2: Kassandra Carrera - Color #8fb4aa -->
+          <div class="equipo-card color-equipo-2">
             <div class="equipo-foto">
               <img
                 src="img/kassandraCarrera.jpg"
@@ -280,8 +280,8 @@
             </p>
           </div>
 
-          <!-- Psicóloga 3 -->
-          <div class="equipo-card">
+          <!-- Psicóloga 3 - Color #c3aa9c -->
+          <div class="equipo-card color-equipo-3">
             <div class="equipo-foto">
               <img
                 src="img/psicologa.jpg"
