--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="nav-container">
           <div class="logo">
             <a href="index.html" aria-label="Mente en Calma - Inicio">
-              <img                
+              <img
                 alt="Mente en Calma - Centro Psicológico en Lima"
                 class="logo-image"
               />
@@ -257,7 +257,8 @@
       <div class="container">
         <h2 class="section-title">Principios que sostienen cada proceso</h2>
         <div class="valores-grid">
-          <div class="valor-card">
+          <!-- Tarjeta 1: Ética clínica - #f1ebe1 (el que ya tienes) -->
+          <div class="valor-card color-1">
             <div class="valor-icono">
               <i class="fas fa-scale-balanced"></i>
             </div>
@@ -268,7 +269,9 @@
               etapa.
             </p>
           </div>
-          <div class="valor-card">
+
+          <!-- Tarjeta 2: Marco estructurado - #8fb4aa -->
+          <div class="valor-card color-2">
             <div class="valor-icono">
               <i class="fas fa-brain"></i>
             </div>
@@ -278,7 +281,9 @@
               estándares establecidos y supervisión interna.
             </p>
           </div>
-          <div class="valor-card">
+
+          <!-- Tarjeta 3: Formación especializada - #c3aa9c -->
+          <div class="valor-card color-3">
             <div class="valor-icono">
               <i class="fas fa-book-open"></i>
             </div>
@@ -288,7 +293,9 @@
               emocional y terapias basadas en evidencia.
             </p>
           </div>
-          <div class="valor-card">
+
+          <!-- Tarjeta 4: Trato humano - #88b1bd -->
+          <div class="valor-card color-4">
             <div class="valor-icono">
               <i class="fas fa-heart"></i>
             </div>
