--- a/metodologia.html
+++ b/metodologia.html
@@ -183,8 +183,8 @@
       <div class="container">
         <h2 class="section-title">Conoce cómo trabajamos en terapia</h2>
         <div class="metodologia-grid">
-          <!-- 1: Evidencia Clínica -->
-          <div class="metodologia-card">
+          <!-- 1: Evidencia Clínica - Color #f1ebe1 -->
+          <div class="metodologia-card color-meta-1">
             <div class="metodologia-icono">
               <i class="fas fa-search"></i>
             </div>
@@ -195,8 +195,8 @@
             </p>
           </div>
 
-          <!-- 2: Enfoque Terapéutico -->
-          <div class="metodologia-card">
+          <!-- 2: Enfoque Terapéutico - Color #4c7d9e -->
+          <div class="metodologia-card color-meta-2">
             <div class="metodologia-icono">
               <i class="fas fa-brain"></i>
             </div>
@@ -208,8 +208,8 @@
             </p>
           </div>
 
-          <!-- 3: Objetivos Claros -->
-          <div class="metodologia-card">
+          <!-- 3: Objetivos Claros - Color #8fb4aa -->
+          <div class="metodologia-card color-meta-3">
             <div class="metodologia-icono">
               <i class="fas fa-bullseye"></i>
             </div>
@@ -221,8 +221,8 @@
             </p>
           </div>
 
-          <!-- 4: Atención Profesional -->
-          <div class="metodologia-card">
+          <!-- 4: Atención Profesional - Color #c3aa9c -->
+          <div class="metodologia-card color-meta-4">
             <div class="metodologia-icono">
               <i class="fas fa-graduation-cap"></i>
             </div>
@@ -234,8 +234,8 @@
             </p>
           </div>
 
-          <!-- 5: Temas en Terapia -->
-          <div class="metodologia-card">
+          <!-- 5: Temas en Terapia - Color #88b1bd -->
+          <div class="metodologia-card color-meta-5">
             <div class="metodologia-icono">
               <i class="fas fa-heart"></i>
             </div>
