--- a/servicios/asesoria-clinica.html
+++ b/servicios/asesoria-clinica.html
@@ -83,7 +83,7 @@
       <i class="fab fa-whatsapp"></i>
     </a>
     <!-- Header -->
-    <header class="hero-section" id="servicios">
+    <header class="hero-section" id="servicios-asesoria">
       <nav
         class="main-nav"
         style="background-color: transparent; padding: 20px 0px"
@@ -213,7 +213,8 @@
           <h2 class="asesoria-titulo">¿Qué trabajamos en la asesoría?</h2>
 
           <div class="asesoria-grid">
-            <div class="asesoria-card" style="background-color: #f1ebe1">
+            <!-- Card 1: Claridad Clínica - Color #f1ebe1 -->
+            <div class="asesoria-card color-asesoria-1">
               <h3 class="asesoria-card-titulo">Claridad Clínica</h3>
               <p class="asesoria-card-texto">
                 Aprende a estructurar una primera sesión, organizar el motivo de
@@ -222,7 +223,8 @@
               </p>
             </div>
 
-            <div class="asesoria-card" style="background-color: #f1ebe1">
+            <!-- Card 2: Organización del Proceso Terapéutico - Color #8fb4aa -->
+            <div class="asesoria-card color-asesoria-2">
               <h3 class="asesoria-card-titulo">
                 Organización del Proceso Terapéutico
               </h3>
@@ -232,7 +234,8 @@
               </p>
             </div>
 
-            <div class="asesoria-card" style="background-color: #f1ebe1">
+            <!-- Card 3: Análisis de Casos - Color #c3aa9c -->
+            <div class="asesoria-card color-asesoria-3">
               <h3 class="asesoria-card-titulo">Análisis de Casos</h3>
               <p class="asesoria-card-texto">
                 Revisa casos clínicos y aprende a identificar patrones,
@@ -240,7 +243,8 @@
               </p>
             </div>
 
-            <div class="asesoria-card" style="background-color: #f1ebe1">
+            <!-- Card 4: Seguridad Profesional - Color #88b1bd -->
+            <div class="asesoria-card color-asesoria-4">
               <h3 class="asesoria-card-titulo">Seguridad Profesional</h3>
               <p class="asesoria-card-texto">
                 Trabaja el miedo a equivocarte, la inseguridad inicial y las
