--- a/equipo-clinico.html
+++ b/equipo-clinico.html
@@ -160,7 +160,7 @@
             </div>
           </div>
           <a
-            href="https://wa.me/51991688424"
+            href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20mi%20primera%20sesi%C3%B3n"
             target="_blank"
             class="btn-reserva"
             >RESERVA TU CITA</a
@@ -178,7 +178,7 @@
           evidencia y amplia experiencia en el abordaje de ansiedad y regulación
           emocional. .
         </p>
-        <a href="https://wa.me/51991688424" target="_blank" class="cta-button"
+        <a href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20mi%20primera%20sesi%C3%B3n" target="_blank" class="cta-button"
           >Agenda tu primera sesión</a
         >
       </div>
@@ -247,6 +247,13 @@
     <section class="equipo-section">
       <div class="container">
         <h2 class="section-title">Psicólogas de Mente en Calma</h2>
+
+        <p class="equipo-intro-texto">
+          Cada especialista del equipo trabaja bajo el estándar clínico del
+          centro, garantizando coherencia metodológica y calidad en cada
+          proceso
+        </p>
+
         <div class="equipo-grid">
           <!-- Psicóloga 1: Magaly Zevallos - Color #f1ebe1 -->
           <div class="equipo-card color-equipo-1">
@@ -258,9 +265,8 @@
             </div>
             <h3 class="equipo-nombre">Magaly Zevallos</h3>
             <p class="equipo-descripcion">
-              Cada especialista del equipo trabaja bajo el estándar clínico del
-              centro, garantizando coherencia metodológica y calidad en cada
-              proceso.
+              Psicóloga y psicoterapeuta de jóvenes y adultos<br />
+              Enfoque cognitivo conductual (TCC)
             </p>
           </div>
 
@@ -274,9 +280,9 @@
             </div>
             <h3 class="equipo-nombre">Kassandra Carrera</h3>
             <p class="equipo-descripcion">
-              Cada especialista del equipo trabaja bajo el estándar clínico del
-              centro, garantizando coherencia metodológica y calidad en cada
-              proceso.
+              Psicóloga y psicoterapeuta de adolescentes y adultos jóvenes
+              <br />
+              Enfoque racional emotivo conductual (TREC)
             </p>
           </div>
 
@@ -290,9 +296,8 @@
             </div>
             <h3 class="equipo-nombre">Psicóloga</h3>
             <p class="equipo-descripcion">
-              Cada especialista del equipo trabaja bajo el estándar clínico del
-              centro, garantizando coherencia metodológica y calidad en cada
-              proceso.
+              Psicóloga y psicoterapeuta de parejas <br />
+              Enfoque cognitivo conductual
             </p>
           </div>
         </div>
