--- a/servicios/terapia-psicologica.html
+++ b/servicios/terapia-psicologica.html
@@ -155,7 +155,7 @@
             </div>
           </div>
           <a
-            href="https://wa.me/51991688424"
+            href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20mi%20primera%20sesi%C3%B3n"
             target="_blank"
             class="btn-reserva"
             >RESERVA TU CITA</a
@@ -171,7 +171,7 @@
         <p class="hero-subtitle">
           Acompañamiento profesional adaptado a tus necesidades
         </p>
-        <a href="https://wa.me/51991688424" target="_blank" class="cta-button"
+        <a href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20mi%20primera%20sesi%C3%B3n" target="_blank" class="cta-button"
           >Agenda tu primera sesión</a
         >
       </div>
@@ -207,7 +207,7 @@
               </p>
               <div class="terapia-btn-container">
                 <a
-                  href="https://wa.me/51991688424"
+                  href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20mi%20primera%20sesi%C3%B3n"
                   target="_blank"
                   class="terapia-btn"
                   >Agenda tu primera sesión</a
@@ -251,7 +251,7 @@
               </p>
               <div class="terapia-btn-container">
                 <a
-                  href="https://wa.me/51991688424"
+                  href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20mi%20primera%20sesi%C3%B3n"
                   target="_blank"
                   class="terapia-btn"
                   >Agenda tu primera sesión</a
