--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
           </div>
           <a
-            href="https://wa.me/51991688424"
+            href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20mi%20primera%20sesi%C3%B3n"
             target="_blank"
             class="btn-reserva"
             >RESERVA TU CITA</a
@@ -175,7 +175,7 @@
           sientes, poner límites, fortalecer tu autoestima y dejar de vivir en
           alerta constante.
         </p>
-        <a href="https://wa.me/51991688424" target="_blank" class="cta-button"
+        <a href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20mi%20primera%20sesi%C3%B3n" target="_blank" class="cta-button"
           >Agenda tu primera sesión</a
         >
       </div>
