--- a/metodologia.html
+++ b/metodologia.html
@@ -155,7 +155,7 @@
             </div>
           </div>
           <a
-            href="https://wa.me/51991688424"
+            href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20mi%20primera%20sesi%C3%B3n"
             target="_blank"
             class="btn-reserva"
             >RESERVA TU CITA</a
@@ -172,7 +172,7 @@
           Intervenciones estructuradas basadas en evidencia científica y
           formulación clínica individualizada.
         </p>
-        <a href="https://wa.me/51991688424" target="_blank" class="cta-button"
+        <a href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20mi%20primera%20sesi%C3%B3n" target="_blank" class="cta-button"
           >Agenda tu primera sesión</a
         >
       </div>
