--- a/servicios/asesoria-clinica.html
+++ b/servicios/asesoria-clinica.html
@@ -155,7 +155,7 @@
             </div>
           </div>
           <a
-            href="https://wa.me/51991688424"
+            href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20mi%20primera%20sesi%C3%B3n"
             target="_blank"
             class="btn-reserva"
             >RESERVA TU CITA</a
@@ -171,8 +171,8 @@
         <p class="hero-subtitle">
           Espacio personalizado para organizar tu manera de intervenir
         </p>
-        <a href="https://wa.me/51991688424" target="_blank" class="cta-button"
-          >Reserva un taller</a
+        <a href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20una%20asesor%C3%ADa" target="_blank" class="cta-button"
+          >Solicitar tu asesoría</a
         >
       </div>
     </header>
@@ -273,7 +273,7 @@
 
           <div class="asesoria-boton-contenedor">
             <a
-              href="https://wa.me/51991688424"
+              href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20una%20asesor%C3%ADa"
               target="_blank"
               class="asesoria-boton"
               >Solicita tu asesoría</a
