--- a/servicios/talleres-grupales.html
+++ b/servicios/talleres-grupales.html
@@ -155,7 +155,7 @@
             </div>
           </div>
           <a
-            href="https://wa.me/51991688424"
+            href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20mi%20primera%20sesi%C3%B3n"
             target="_blank"
             class="btn-reserva"
             >RESERVA TU CITA</a
@@ -171,7 +171,7 @@
         <p class="hero-subtitle">
           Espacio para el desarrollo de habilidades emocionales
         </p>
-        <a href="https://wa.me/51991688424" target="_blank" class="cta-button"
+        <a href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20un%20taller" target="_blank" class="cta-button"
           >Reserva un taller</a
         >
       </div>
@@ -220,10 +220,10 @@
 
               <div class="taller-btn-container">
                 <a
-                  href="https://wa.me/51991688424"
+                  href="https://wa.me/51991688424?text=Hola%2C%20quiero%20agendar%20un%20taller"
                   target="_blank"
                   class="taller-btn"
-                  >Agenda tu primera sesión</a
+                  >Reserva tu taller</a
                 >
               </div>
             </div>
